Fix for broken color preferences. bug 77828. r=sfraser, sr=alecf.